[gd_scene load_steps=2 format=3 uid="uid://c81y65jv0rmxo"]

[ext_resource type="Script" uid="uid://gq1dcnf46vdr" path="res://examples/download_manager/download_manager.gd" id="1"]

[node name="DownloadManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Godot-Torrent Download Manager"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InputSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MagnetLabel" type="Label" parent="VBoxContainer/InputSection"]
layout_mode = 2
text = "Magnet URI:"

[node name="MagnetInput" type="LineEdit" parent="VBoxContainer/InputSection"]
layout_mode = 2
text = "magnet:?xt=urn:btih:a88fda5954e89178c372716a6a78b8180ed4dad3&dn=The+WIRED+CD+-+Rip.+Sample.+Mash.+Share&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.fastcast.nz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2F&xs=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fwired-cd.torrent"
placeholder_text = "magnet:?xt=urn:btih:..."

[node name="DownloadPathLabel" type="Label" parent="VBoxContainer/InputSection"]
layout_mode = 2
text = "Download Path:"

[node name="DownloadPathInput" type="LineEdit" parent="VBoxContainer/InputSection"]
layout_mode = 2
placeholder_text = "/path/to/downloads"

[node name="AddButton" type="Button" parent="VBoxContainer/InputSection"]
layout_mode = 2
text = "Add Torrent"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ListLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Active Downloads:"

[node name="TorrentList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
autowrap_mode = 2
